[gd_scene load_steps=2 format=2]

[ext_resource path="res://HUD/HUD.gd" type="Script" id=1]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Score" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -22.5
margin_right = 22.5
margin_bottom = 50.0
grow_horizontal = 2
text = "SCORE"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOver" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -38.0
margin_top = -7.0
margin_right = 38.0
margin_bottom = 7.0
text = "GAME OVER"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreMessageTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="StartGame" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -46.0
margin_top = -96.0
margin_right = 46.0
margin_bottom = -76.0
text = "START GAME"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Speed" type="OptionButton" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -38.0
margin_top = -62.0
margin_right = 38.0
margin_bottom = -42.0
grow_horizontal = 2
grow_vertical = 2
text = "Normal"
align = 1
items = [ "Slow", null, false, 10, null, "Normal", null, false, 20, null, "Fast", null, false, 30, null, "Super Fast", null, false, 40, null ]
selected = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="ScoreMessageTimer" to="." method="_on_ScoreMessageTimer_timeout"]
[connection signal="pressed" from="StartGame" to="." method="_on_StartGame_pressed"]
